[metadata]
name = NYUFinger
version = 1.0.0
description = NYU ROB2004 Robotics manipulation and locomotion codes based on the opensource NYU Finger robot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/righetti/ROB2004
author = Ludovic Righetti, Rooholla Khorrambakht
author_email = ludovic.righetti@nyu.edu, rk4342@nyu.edu
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
    pin
    mujoco
    matplotlib